# strlib

./: .gitignore  CMakeLists.txt  Makefile  README.md
results/: average_max_borderless.txt  bad_words.txt  length_minus_max_borderless.txt  length_minus_max_borderless_2.txt  maxborderless.txt  period.txt  queries.txt  some-generated-words.txt
src/: border.c  borderless.c  duval.c  duval.h  exp.c  experiment.c  kmp.c
src/algo/: borderless.c  borderless.h  duval.c  duval.h  kmp.c  kmp.h
src/py/: ESTIMATION-MAXBORDERLESS_PREFIX-2015-04-05-015618.txt  ESTIMATION-MAXBORDERLESS_PREFIX-2015-04-05-133703.txt  ESTIMATION-MAXBORDERLESS_PREFIX-2015-04-05-153248.txt  ESTIMATION-MAXBORDERLESS_PREFIX-2015-04-05-200422.txt  ESTIMATION-MAXBORDERLESS_SUBWORD-2015-04-05-004941.txt  ESTIMATION-MAXBORDERLESS_SUBWORD-2015-04-05-011933.txt  MAXBORDERLESS_BORDER-2015-04-04-123410.txt  MAXBORDERLESS_BORDER-2015-04-05-023010.txt  MAXBORDERLESS_PREFIX-2015-04-02-230833.txt  MAXBORDERLESS_PREFIX-2015-04-02-234253.txt  MAXBORDERLESS_PREFIX-2015-04-03-215716.txt  checker.py  estimate.py  experiment.py  generator.py  graph.py  graph_time.py  max_border.txt  max_borderless.txt  max_borderless_estimation.txt  max_borderless_prefix.txt  max_borderless_prefix_2.md  max_borderless_prefix_5.md  max_borderless_prefix_estimation.txt  max_borderless_time.txt  min_period_max_borderless_diff.txt  printer.py  some_eval.py  time.txt  values.txt
src/py/results/Average difference/Between n and maximal unbordered factor and prefix/: README.md
src/py/test/: test.md
